--- a/SecurityPhishingAsAService/SecurityPhishingAsAService.csproj
+++ b/SecurityPhishingAsAService/SecurityPhishingAsAService.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Docker.DotNet" Version="3.125.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
